# starlight

./: .env.example  .gitignore  DEVELOPMENT.md  PROJECT_SUMMARY.md  README.md  bot.py  edl_downloader.py  install.sh  main.py  pyproject.toml  requirements.txt  test_edl_downloader.py
cogs/: __init__.py  ip_lookup.py  logger.py  music.py  tiktok_lookup.py  torrent_handler.py  virus_scanner.py  website_lookup.py
edl/: __init__.py  auth.py  cli.py  colors.py  download.py  utils.py
tests/: __init__.py  test_auth_config.py  test_format_selection.py
